[project]
name = "cratedb-sqlparse-generator"
version = "0.0.1"
description = "Dependencies to build and generate cratedb-sqlparse parsers; same for all target languages"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "antlr4-tools<0.3",
    "requests<3",
]
tool.uv.package = false
